# koshucode-design

./: INOUT-GRAND-SUMMARY.md  INOUT-SUMMARY.md  README.md  REGRESS.k  VERSION.k
emacs/: koshu-mode.el
explain/: README.md
explain/core/: split-short-section.md
glossary/: README.md
haskell/replace-group/: INOUT-HS.sh  README.md  replace-group.hs  replace-group.sh
haskell/time/: Example.hs
learn/basic-operator/: INOUT.md  README.md  add.k  cut.k  dee.k  dum.k  join.k  keep.k  maybe.k  meet.k  move.k  omit.k  pick.k  rename.k  source.k
learn/why-koshu/: README.md
note/: ALL-NOTE.k  INOUT-SUMMARY.md  all-note-list.k  all-note-list.sh
note/abbreviated-signs/: README.md
note/abortable-points/: ABORTABLE.k  README.md  abortable.sh
note/alterative-judgement/: README.md
note/ascii-table/: INOUT.md  INOUT.sh  README.md  ascii.k  group.k  table.k
note/attribute-editor/: README.md
note/attribute-of-relation/: README.md
note/boyce-codd-normal-form/: 3NF.md  BCNF-DATA.k  BCNF.md  README.md
note/check-term/: INOUT.md  README.md  attr-multi.k  attr-none.k  has-abort.k  has-normal.k  just-abort.k  just-normal.k
note/construct-relmap/: README.md
note/cop-if/: README.md  if.k
note/short-signs/short/: run.sh  short-simple.prof  short-tree.hs  short-tree.prof  short.cabal
note/short-signs/short/data/: WORD.txt
read-judge-literals/: README.md  judge.hs
rop/: README.md
run-relmap-using-relation-directly/: README.md
sketch/: INOUT-SUMMARY.md  README.md
toolkit/: INOUT-SUMMARY.md
version/: INOUT.md  INOUT.sh  VERSION.k  list-version.k
(+559 files in other folders)
