name:                short
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable short-simple
  main-is:             short-simple.hs
  build-depends:       base >=4.6 && <4.7
  default-language:    Haskell2010
  ghc-options:         -prof -fprof-auto -rtsopts -O1

executable short-tree
  main-is:             short-tree.hs
  build-depends:       base >=4.6 && <4.7
  default-language:    Haskell2010
  ghc-options:         -prof -fprof-auto -rtsopts -O1

